# geebeam

./: .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
.github/: dependabot.yml  release.yml
.github/workflows/: docker-publish.yml  pytest-lint.yml  release.yml
docs/: conf.py  getting_started.rst  index.rst  output_types.rst  requirements.txt  scaling_up.rst  split_processing.rst
examples/: geebeam_run.py
scripts/: geebeam_run.py
src/geebeam/: __init__.py  _ee_utils.py  _pipeline.py  _tf_utils.py  _tfds_writer.py  _tfrecord_writer.py  _tiff_writer.py  _transforms.py  _wds_writer.py  climate_indices.py  ee_utils.py  pipeline.py  runner.py  runner_working.py  sampler.py  tf_utils.py  tfds_builder.py  tfds_writer.py  tfrecord_writer.py  tiff_writer.py  transforms.py
src/geebeam/runner/: __init__.py  example_config.json  geebeam_main.py  geebeam_run.py  pipeline_requirements.txt  run_df.sh
tests/: conftest.py  test_climate_indices.py  test_ee_utils.py  test_integration.py  test_pipeline.py  test_runner.py  test_sampler.py  test_tf_utils.py  test_tiff_writer.py  test_transforms.py  test_wds_writer.py
