[project]
name = "geebeam"
version = "0.1.0"
description = "Google Earth Engine + Apache Beam for building training datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-beam[gcp]>=2.70.0",
    "dill>=0.4.1",
    "earthengine-api>=1.7.10",
    "geopandas>=1.0.1",
    "tensorflow==2.17",
    "tensorflow-data-validation>=1.17.0",
    "tensorflow-metadata>=1.17.3",
    "tfx-bsl>=1.17.1",
]
