[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "geebeam"
dynamic = ["version"]
license = "MIT"
description = "Earth Engine + Apache Beam"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-beam[gcp]>=2.70.0",
    "dill>=0.4.1",
    "earthengine-api>=1.7.10",
    "geopandas>=1.0.1",
    "grpcio>=1.62.3",
    "rasterio>=1.3.10"
]

[project.optional-dependencies]
test = ["pytest"]
lint = ["ruff"]
build = ["hatch"]
tensorflow = [
    "tensorflow>=2.16",
    "tensorflow-data-validation>=1.16",
    "tensorflow-metadata>=1.16",
    "tfx-bsl>=1.16",
    "tensorflow-datasets>=4.9.9",
    "importlib-resources>=6.5.2",
]
all = [
    "geebeam[tensorflow,test,lint]"
]

# Version control
[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "tests",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "setup.py"
]
